// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodsDataService search input - filr 1`] = `
Array [
  "filter",
  "find",
]
`;

exports[`MethodsDataService search input - fli 1`] = `
Array [
  "flip",
  "F",
  "flatten",
]
`;

exports[`MethodsDataService search input - flit 1`] = `
Array [
  "flip",
  "split",
  "splitAt",
  "init",
  "omit",
]
`;

exports[`MethodsDataService search input - flitn 1`] = `
Array [
  "flip",
  "flatten",
  "splitWhen",
  "split",
]
`;

exports[`MethodsDataService search input - flitr 1`] = `
Array [
  "flip",
  "split",
]
`;

exports[`MethodsDataService search input - foe 1`] = `
Array [
  "F",
  "forEach",
]
`;

exports[`MethodsDataService search input - for 1`] = `
Array [
  "or",
  "forEach",
  "xor",
  "filter",
  "pathOr",
  "propOr",
  "F",
]
`;

exports[`MethodsDataService search input - fora 1`] = `
Array [
  "forEach",
]
`;

exports[`MethodsDataService search input - ini 1`] = `
Array [
  "init",
  "inc",
  "isNil",
  "indexBy",
  "indexOf",
  "includes",
]
`;

exports[`MethodsDataService search input - rus 1`] = `Array []`;
